-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: hs25
-
Component/s: hotspot
-
b52
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8025789 | 8 | Stefan Karlsson | P2 | Closed | Fixed | b110 |
In the fix for 'JDK-8024547: MaxMetaspaceSize should limit the committed memory used by the metaspaces' we need to make a clearer distinction between when new memory is committed and when memory is allocated inside already committed memory.
Moving the ChunkManager, which handles the free chunk list, out of the VirtualSpaceList, which handles the committed metaspace memory, is a step in that direction.
Moving the ChunkManager, which handles the free chunk list, out of the VirtualSpaceList, which handles the committed metaspace memory, is a step in that direction.
- backported by
-
JDK-8025789 Move the ChunkManager instances out of the VirtualSpaceLists
-
- Closed
-
- blocks
-
JDK-8024547 MaxMetaspaceSize should limit the committed memory used by the metaspaces
-
- Closed
-