8025096: Move the ChunkManager instances out of the VirtualSpaceLists

Reviewed-by: coleenp, mgerdin, jmasa